fix homepage slider gaps

--- a/assets/css/_sass/custom.scss
+++ b/assets/css/_sass/custom.scss
@@ -293,7 +293,7 @@ header {
   text-align: center;
   line-height: 300px;
   @include media-query($on-palm) {
-    height: 40vh;
+    height: 33vh;
   }
 }
 
